# RocketCAE

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  _finish.py  pyproject.toml
app/: streamlit_app.py
docs/: ANNOUNCEMENTS.md  chema_gap_analysis.md  engineering_helpers.md  heritage.md  related_work.md  rp1311_samples.md  validation.md
examples/: rp1311_example13.py  rp1311_example8.py  run_lox_lh2.py  run_rp1311_all.py  sweep_lox_rp1.py
src/pychema/: __init__.py  cea_runner.py  cli.py  design.py  mission.py  models.py  nozzle.py  optimize.py  propellants.py  ranking.py  references.py  report.py  rp1311_catalog.py  rp1311_smoke.py  sizing.py  sweeps.py  validation.py
src/rocketcae/: cli.py  geometry.py  mission.py  report.py  sizing.py
tests/: test_core.py  test_helpers.py  test_nozzle_design.py  test_rp1311_example8.py  test_rp1311_samples.py
